<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home_graph"
        android:contentDescription="@string/cd_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_statistic_graph"
        android:contentDescription="@string/cd_statistic"
        android:icon="@drawable/ic_statistic"
        android:title="@string/title_statistic" />

    <item
        android:id="@+id/nav_new_transaction"
        android:contentDescription="@string/cd_wallet"
        android:icon="@drawable/ic_balance_wallet"
        android:title="@string/title_wallet" />

    <item
        android:id="@+id/nav_event_graph"
        android:contentDescription="@string/cd_wallet"
        android:icon="@drawable/ic_balance_wallet"
        android:title="@string/title_wallet" />

    <item
        android:id="@+id/nav_account_graph"
        android:contentDescription="@string/cd_wallet"
        android:icon="@drawable/ic_balance_wallet"
        android:title="@string/title_wallet" />
</menu>
