<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="isSupportFingerprint"
            type="Boolean" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionGroup="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:transitionGroup="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/btn_login_face"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="16dp"
                android:paddingLeft="12dp"
                android:paddingTop="12dp"
                android:paddingRight="12dp"
                android:paddingBottom="12dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_login_google"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:layout_marginBottom="16dp"
                android:text="@string/login_with_google"
                android:textAllCaps="false"
                android:textAppearance="?attr/textAppearanceButton"
                android:textColor="@color/gray_900"
                android:textSize="12sp"
                app:icon="@drawable/ic_google"
                app:iconTint="@android:color/transparent"
                app:iconTintMode="add"
                app:strokeColor="@color/purple_200" />

            <ImageButton
                android:id="@+id/img_fingerprint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_black_stroke"
                android:contentDescription="@string/image_fingerprint_des"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_fingerprint_24"
                app:setVisible="@{isSupportFingerprint}" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="#212121" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tip_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="22dp"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="22dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="22dp"
                android:padding="12dp"
                android:text="@string/login"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="4dp"
                android:text="@string/register"
                android:textColor="@color/green_700"
                android:textSize="12sp" />

        </LinearLayout>
    </ScrollView>

</layout>