<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="dataViewModel"
            type="haivv.learning.savingmoney.ui.feature.authencation.register.form.RegistrationFormVM" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <View
                android:id="@+id/centerHorizontal"
                android:layout_width="0.5dp"
                android:layout_height="0.5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="24dp"
                android:text="@string/registration_first_name"
                android:textColor="@color/gray_900"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtFirstName"
                style="@style/styleEditTextEnable"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:inputType="text"
                app:layout_constraintEnd_toStartOf="@id/centerHorizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvFirstName"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/tv_ErrorFirstName"
                style="@style/styleTextViewError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtFirstName"
                app:showError="@{dataViewModel.firstNameError}"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tvLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/registration_last_name"
                android:textColor="@color/gray_900"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/centerHorizontal"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtLastName"
                style="@style/styleEditTextEnable"
                android:layout_width="0dp"
                android:layout_height="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/centerHorizontal"
                app:layout_constraintTop_toBottomOf="@+id/tvFirstName" />

            <TextView
                android:id="@+id/tv_ErrorLastName"
                style="@style/styleTextViewError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/centerHorizontal"
                app:layout_constraintTop_toBottomOf="@id/edtFirstName"
                app:showError="@{dataViewModel.lastNameError}"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="24dp"
                android:text="@string/registration_gender"
                android:textColor="@color/gray_900"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_ErrorFirstName" />

            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvGender">

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="56sp"
                    android:text="@string/registration_female"
                    android:textColor="@color/gray_900"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="56dp"
                    android:text="@string/registration_male"
                    android:textColor="@color/gray_900"
                    android:textSize="14sp" />

            </RadioGroup>

            <TextView
                android:id="@+id/tvDOB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="24dp"
                android:text="@string/registration_date_of_birth"
                android:textColor="@color/gray_900"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioGroupGender" />

            <TextView
                android:id="@+id/edtDOB"
                style="@style/styleEditTextEnable"
                android:layout_width="0dp"
                android:layout_height="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDOB" />

            <TextView
                android:id="@+id/tv_ErrorDOB"
                style="@style/styleTextViewError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtDOB"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="24dp"
                android:text="@string/registration_email"
                android:textColor="@color/gray_900"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_ErrorDOB" />

            <EditText
                android:id="@+id/edtEmail"
                style="@style/styleEditTextEnable"
                android:layout_width="0dp"
                android:layout_height="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

            <TextView
                android:id="@+id/tv_ErrorEmail"
                style="@style/styleTextViewError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtEmail"
                app:showError="@{dataViewModel.emailError}"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="24dp"
                android:text="@string/registration_contact_with"
                android:textColor="@color/gray_900"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_ErrorEmail" />

            <EditText
                android:id="@+id/edtPhone"
                style="@style/styleEditTextEnable"
                android:layout_width="0dp"
                android:layout_height="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPhone" />

            <TextView
                android:id="@+id/tv_ErrorPhone"
                style="@style/styleTextViewError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtPhone"
                app:showError="@{dataViewModel.phoneError}"
                tools:ignore="SmallSp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/background_button_disable"
                android:padding="12dp"
                android:text="@string/text_btn_next"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:isEnable="@{dataViewModel.isEnableNextBtn()}"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_ErrorPhone" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>

